--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,8 +7,8 @@
 	margin-right: 25px;
 	opacity: 0.85;
 	position: relative;
-	width: 320px;
-	height: 240px;
+	width: 300px;
+	height: 220px;
 	background-size: cover;
 }
 
@@ -20,13 +20,13 @@
 	color: white;
 	width: 100%;
 	font-size: 2em;
-
 }
 
 #video-container {
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 100px;
+	width: 100%;
 }
 
 #video-text {
@@ -38,7 +38,7 @@
 
 #taj-video {
 	width: 100%;
-	height: 300px;
+	height: auto;
 	z-index: 1;
 }
 
@@ -82,3 +82,30 @@
 	background-image: url("unitedstates.jpg");
 }
 
+#india {
+  background-image: url("india.jpg");	
+}
+
+#japan {
+  background-image: url("japan.jpg");	
+}
+
+#cambodia {
+  background-image: url("cambodia.jpg");	
+}
+
+#antarctica {
+  background-image: url("antarctica.jpg");	
+}
+
+#china {
+	background-image: url("china.jpg");
+}
+
+#brazil {
+  background-image: url("brazil.jpg");	
+}
+
+#ocean {
+  background-image: url("ocean.jpg");	
+}
