go back to image tag for location images

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -4,23 +4,23 @@
 
 .country {
 	margin-bottom: 25px;
-	margin-right: 25px;
+	// margin-right: 25px;
 	opacity: 0.85;
 	position: relative;
-	width: 300px;
-	height: 220px;
-	background-size: cover;
+	// width: 300px;
+	// height: 220px;
+	// background-size: cover;
 }
 
-.country-text {
-	position: absolute;
-	top: 40%;
-	left: 0;
-	text-align: center;
-	color: white;
-	width: 100%;
-	font-size: 2em;
-}
+// .country-text {
+// 	position: absolute;
+// 	top: 40%;
+// 	left: 0;
+// 	text-align: center;
+// 	color: white;
+// 	width: 100%;
+// 	font-size: 2em;
+// }
 
 #video-container {
 	position: relative;
@@ -74,38 +74,38 @@
 	color: #565a5c;
 }
 
-#canada {
-	background-image: url("canada.jpg");
-}
+// #canada {
+// 	background-image: url("canada.jpg");
+// }
 
-#unitedstates {
-	background-image: url("unitedstates.jpg");
-}
+// #unitedstates {
+// 	background-image: url("unitedstates.jpg");
+// }
 
-#india {
-  background-image: url("india.jpg");	
-}
+// #india {
+//   background-image: url("india.jpg");	
+// }
 
-#japan {
-  background-image: url("japan.jpg");	
-}
+// #japan {
+//   background-image: url("japan.jpg");	
+// }
 
-#cambodia {
-  background-image: url("cambodia.jpg");	
-}
+// #cambodia {
+//   background-image: url("cambodia.jpg");	
+// }
 
-#antarctica {
-  background-image: url("antarctica.jpg");	
-}
+// #antarctica {
+//   background-image: url("antarctica.jpg");	
+// }
 
-#china {
-	background-image: url("china.jpg");
-}
+// #china {
+// 	background-image: url("china.jpg");
+// }
 
-#brazil {
-  background-image: url("brazil.jpg");	
-}
+// #brazil {
+//   background-image: url("brazil.jpg");	
+// }
 
-#ocean {
-  background-image: url("ocean.jpg");	
-}
+// #ocean {
+//   background-image: url("ocean.jpg");	
+// }
