--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,57 +13,39 @@
 </div>
 
 <div class="row">
-	<%= link_to businesses_path(:country => "Canada", :category => "") do %>
-		<div class="large-4 columns country" id="canada">
-	      <p class="country-text">Canada</p>
-	  </div>
-  <% end %>
+	<div class="large-4 columns country" id="canada">
+      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+  </div>
 
-  <%= link_to businesses_path(:country => "United States", :category => "") do %>
-	  <div class="large-4 columns country" id="unitedstates">  
-	    	<p class="country-text">United States</p>
-		</div>
-	<% end %>
+  <div class="large-4 columns country">  
+    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+	</div>
 
-	<%= link_to businesses_path(:country => "India", :category => "") do %>
-	  <div class="large-4 columns country" id="india">  
-	    	<p class="country-text">India</p>
-		</div>
-	<% end %>
-	
-	<%= link_to businesses_path(:country => "Japan", :category => "") do %>
-	  <div class="large-4 columns country" id="japan">  
-	    	<p class="country-text">Japan</p>
-		</div>
-	<% end %>
+	<div class="large-4 columns country">  
+  	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>  
+	</div>
 
-  <%= link_to businesses_path(:country => "Cambodia", :category => "") do %>
-	  <div class="large-4 columns country" id="cambodia">  
-	    	<p class="country-text">Cambodia</p>
-		</div>
-	<% end %>
+	<div class="large-4 columns country">
+      <%= link_to image_tag("japan.jpg"), businesses_path(:country => "Japan", :category => "") %>
+  </div>
 
-	<%= link_to businesses_path(:country => "Antarctica", :category => "") do %>
-	  <div class="large-4 columns country" id="antarctica">  
-	    	<p class="country-text">Antarctica</p>
-		</div>
-	<% end %>
+  <div class="large-4 columns country">  
+    	<%= link_to image_tag("cambodia.jpg"), businesses_path(:country => "Cambodia", :category => "") %>
+	</div>
 
-	<%= link_to businesses_path(:country => "China", :category => "") do %>
-	  <div class="large-4 columns country" id="china">  
-	    	<p class="country-text">China</p>
-		</div>
-	<% end %>
+	<div class="large-4 columns country">  
+    <%= link_to image_tag("antarctica.jpg"), businesses_path(:country => "Antarctica", :category => "") %>
+	</div>
 
-  <%= link_to businesses_path(:country => "Brazil", :category => "") do %>
-	  <div class="large-4 columns country" id="brazil">  
-	    	<p class="country-text">Brazil</p>
-		</div>
-	<% end %>
+	<div id="canada" class="large-4 columns country">
+      <%= link_to image_tag("china.jpg"), businesses_path(:country => "China", :category => "") %>
+  </div>
 
-	<%= link_to businesses_path(:country => "", :category => "Ocean") do %>
-	  <div class="large-4 columns country" id="ocean">  
-	    	<p class="country-text">Ocean</p>
-		</div>
-	<% end %>
+  <div class="large-4 columns country">  
+    	<%= link_to image_tag("brazil.jpg"), businesses_path(:country => "Brazil", :category => "") %>
+	</div>
+
+	<div class="large-4 columns country">  
+    	<%= link_to image_tag("ocean.jpg"), businesses_path(:country => "", :category => "Ocean") %>
+	</div>
 </div>
