--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,7 +14,12 @@
 
 <div class="row">
 	<div class="large-4 columns country" id="canada">
-      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+		  <ul class="img-list">
+		  	<li>
+		      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+		      <span class="text-content">Canada</span>
+		    </li>
+	    </ul>
   </div>
 
   <div class="large-4 columns country">  
