remove list attributes from location image and text

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -110,18 +110,18 @@
 //   background-image: url("ocean.jpg");	
 // }
 
-ul.img-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
+// ul.img-list {
+//   list-style-type: none;
+//   margin: 0;
+//   padding: 0;
+//   text-align: center;
+// }
  
-ul.img-list li {
-  display: inline-block; 
-  position: relative;
+// ul.img-list li {
+//   display: inline-block; 
+//   position: relative;
   
-}
+// }
 
 span.text-content {
   color: white;
