text overlay for rest of locations

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -20,33 +20,41 @@
 
   <div class="large-4 columns country">  
     	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    	<span class="text-content">United States</span>
 	</div>
 
 	<div class="large-4 columns country">  
-  	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>  
+  	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
+  	<span class="text-content">India</span>  
 	</div>
 
 	<div class="large-4 columns country">
       <%= link_to image_tag("japan.jpg"), businesses_path(:country => "Japan", :category => "") %>
+      <span class="text-content">Japan</span>
   </div>
 
   <div class="large-4 columns country">  
     	<%= link_to image_tag("cambodia.jpg"), businesses_path(:country => "Cambodia", :category => "") %>
+    	<span class="text-content">Cambodia</span>
 	</div>
 
 	<div class="large-4 columns country">  
     <%= link_to image_tag("antarctica.jpg"), businesses_path(:country => "Antarctica", :category => "") %>
+    <span class="text-content">Antarctica</span>
 	</div>
 
 	<div id="canada" class="large-4 columns country">
       <%= link_to image_tag("china.jpg"), businesses_path(:country => "China", :category => "") %>
+      <span class="text-content">China</span>
   </div>
 
   <div class="large-4 columns country">  
     	<%= link_to image_tag("brazil.jpg"), businesses_path(:country => "Brazil", :category => "") %>
+    	<span class="text-content">Brazil</span>
 	</div>
 
 	<div class="large-4 columns country">  
     	<%= link_to image_tag("ocean.jpg"), businesses_path(:country => "", :category => "Ocean") %>
+    	<span class="text-content">Oceans</span>
 	</div>
 </div>
