--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -15,7 +15,7 @@
 	width: 100%;
 }
 
-#video-text {
+#video-overlay {
 	position: absolute;
 	top: 20%;
 	left: 0;
@@ -37,12 +37,11 @@
 	text-align: center;
 }
 
-.home-text {
+#slogan {
 	font-size: 300%;
 	text-align: center;
 	color: white;
 	width: 100%;
-	text-align: center;
 }
 
 #home-button {
