--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -44,9 +44,13 @@
 	width: 100%;
 }
 
+#video-button-container {
+	width: 100%;
+	text-align: center;
+}
+
 #home-button {
 	opacity: 0.5;
-	left:45%;
 }
 
 #country-select-title {
