--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 	<%= video_tag("tajmahal.mp4", autoplay: true, loop: true, muted: true, :id => "taj-video") %>
 	<div id="video-overlay">
     <h1 class="video-text" id="slogan">Visit places around the world, at home</h1>
-    <div>
+    <div id="video-button-container">
       <%= button_to "Visit Places", businesses_path, :method => :get, :class => 'button', :id => "home-button" %>
     </div>
 	</div>
