--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,48 +13,66 @@
 </div>
 
 <div class="row">
-	<div class="large-4 columns country" id="canada">
-    <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
-    <span class="text-content">Canada</span>
-  </div>
+	<%= link_to businesses_path(:country => "Canada", :category => "") do %>
+		<div class="large-4 columns country" id="canada">
+	    <%= image_tag("canada.jpg") %>
+	    <span class="text-content">Canada</span>
+	  </div>
+  <% end %>
 
-  <div class="large-4 columns country">  
-    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
-    	<span class="text-content">United States</span>
-	</div>
+  <%= link_to businesses_path(:country => "United States", :category => "") do %>
+		<div class="large-4 columns country" id="unitedstates">
+	    <%= image_tag("unitedstates.jpg") %>
+	    <span class="text-content">United States</span>
+	  </div>
+  <% end %>
 
-	<div class="large-4 columns country">  
-  	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
-  	<span class="text-content">India</span>  
-	</div>
+	<%= link_to businesses_path(:country => "India", :category => "") do %>
+		<div class="large-4 columns country" id="india">
+	    <%= image_tag("india.jpg") %>
+	    <span class="text-content">India</span>
+	  </div>
+  <% end %>
 
-	<div class="large-4 columns country">
-      <%= link_to image_tag("japan.jpg"), businesses_path(:country => "Japan", :category => "") %>
-      <span class="text-content">Japan</span>
-  </div>
+	<%= link_to businesses_path(:country => "Japan", :category => "") do %>
+		<div class="large-4 columns country" id="japan">
+	    <%= image_tag("japan.jpg") %>
+	    <span class="text-content">Japan</span>
+	  </div>
+  <% end %>
 
-  <div class="large-4 columns country">  
-    	<%= link_to image_tag("cambodia.jpg"), businesses_path(:country => "Cambodia", :category => "") %>
-    	<span class="text-content">Cambodia</span>
-	</div>
+  <%= link_to businesses_path(:country => "Cambodia", :category => "") do %>
+		<div class="large-4 columns country" id="cambodia">
+	    <%= image_tag("cambodia.jpg") %>
+	    <span class="text-content">Cambodia</span>
+	  </div>
+  <% end %>
 
-	<div class="large-4 columns country">  
-    <%= link_to image_tag("antarctica.jpg"), businesses_path(:country => "Antarctica", :category => "") %>
-    <span class="text-content">Antarctica</span>
-	</div>
+	<%= link_to businesses_path(:country => "Antarctica", :category => "") do %>
+		<div class="large-4 columns country" id="antarctica">
+	    <%= image_tag("antarctica.jpg") %>
+	    <span class="text-content">Antarctica</span>
+	  </div>
+  <% end %>
 
-	<div id="canada" class="large-4 columns country">
-      <%= link_to image_tag("china.jpg"), businesses_path(:country => "China", :category => "") %>
-      <span class="text-content">China</span>
-  </div>
+	<%= link_to businesses_path(:country => "China", :category => "") do %>
+		<div class="large-4 columns country" id="china">
+	    <%= image_tag("china.jpg") %>
+	    <span class="text-content">China</span>
+	  </div>
+  <% end %>
 
-  <div class="large-4 columns country">  
-    	<%= link_to image_tag("brazil.jpg"), businesses_path(:country => "Brazil", :category => "") %>
-    	<span class="text-content">Brazil</span>
-	</div>
+  <%= link_to businesses_path(:country => "Brazil", :category => "") do %>
+		<div class="large-4 columns country" id="brazil">
+	    <%= image_tag("brazil.jpg") %>
+	    <span class="text-content">Brazil</span>
+	  </div>
+  <% end %>
 
-	<div class="large-4 columns country">  
-    	<%= link_to image_tag("ocean.jpg"), businesses_path(:country => "", :category => "Ocean") %>
-    	<span class="text-content">Oceans</span>
-	</div>
+	<%= link_to businesses_path(:country => "", :category => "Ocean") do %>
+		<div class="large-4 columns country" id="ocean">
+	    <%= image_tag("ocean.jpg") %>
+	    <span class="text-content">Oceans</span>
+	  </div>
+  <% end %>
 </div>
