--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -75,3 +75,14 @@ span.text-content {
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
 }
+
+@media only screen and (max-width: 480px) {
+	#slogan {
+		font-size: 150%;
+	}
+
+	#home-button {
+		height: 5%;
+		font-size: 100%;
+	}
+}
