--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -77,7 +77,6 @@ span.text-content {
 }
 
 @media only screen and (max-width: 480px) {
-
 	#slogan {
 		font-size: 150%;
 	}
@@ -86,4 +85,16 @@ span.text-content {
 		height: 5%;
 		font-size: 100%;
 	}
+
+	span.text-content {
+	  color: white;
+	  left: 0;
+	  position: absolute;
+	  top: 35%;
+	  font-size: 300%;
+	  width: 100%;
+	  height: 100%;
+	  display: flex;
+	  text-align: center;
+  }
 }
