--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,12 @@
 	width: 30%;
 	margin: 0 auto;
 }
+
+#footer {
+	margin-top: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	height: 200px;
+	border-top: 1px solid #565a5c;
+}
