--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,3 +40,16 @@
 	height: 200px;
 	border-top: 1px solid #565a5c;
 }
+
+#footer-links {
+	position: relative;
+	list-style-type: none;
+	width: 100%;
+	text-align: center;
+	margin-top: 2%;
+}
+
+.footer-info {
+	display: inline;
+	margin-right: 1%;
+}
