--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,10 @@
     <%= yield %>
 
     <div id="footer">
+      <ul id="footer-links">
+        <li class="footer-info"><%= link_to "About", about_path %></li>
+        <li class="footer-info"><%= link_to "Contact", contact_us_path %></li>
+      </ul>
     </div>
 
     <%= javascript_include_tag "application" %>
