--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,10 @@
         <li class="footer-info"><%= link_to "About", about_path %></li>
         <li class="footer-info"><%= link_to "Contact", contact_us_path %></li>
       </ul>
+      <ul id="footer-links">
+        <li class="footer-info"><%= link_to image_tag("facebook.png", size: "32"), "http://www.facebook.com" %></li>
+        <li class="footer-info"><%= link_to image_tag("twitter.png", size: "32"), "http://www.twitter.com" %></li>
+      <ul>
     </div>
 
     <%= javascript_include_tag "application" %>
