--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,8 +66,8 @@
         <li class="footer-info"><%= link_to "Contact", contact_us_path %></li>
       </ul>
       <ul id="footer-links">
-        <li class="footer-info"><%= link_to image_tag("facebook.png", size: "32"), "http://www.facebook.com" %></li>
-        <li class="footer-info"><%= link_to image_tag("twitter.png", size: "32"), "http://www.twitter.com" %></li>
+        <li class="footer-info"><%= link_to image_tag("facebook.png", size: "32"), "https://www.facebook.com/pages/Scouting-It/581992745242976" %></li>
+        <li class="footer-info"><%= link_to image_tag("twitter.png", size: "32"), "https://twitter.com/scoutingitout" %></li>
       <ul>
     </div>
 
