Change title of businesses index

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,5 @@
 <div class="title">
-  <h1>Welcome to Scouting It!</h1>
-  <h2>Visit the locations around the world, at home</h2>
+  <h1>All locations</h1>
 </div>
 
 <div id="search-container">
