search submit button centered for mobile

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -52,6 +52,7 @@
 	#search-content {
 		width: 100%;
 		margin-left: 0;
+		text-align: center;
 	}
 
 	#country-select {
@@ -60,9 +61,5 @@
 
 	#category-select {
 		width: 100%;
-	}
-
-	#search-submit {
-		margin: 0 0 auto;
 	}
 }
