center image and text on recent

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -44,6 +44,10 @@
 	margin: 0 auto;
 }
 
+.box-image-container {
+	text-align: center;
+}
+
 @media only screen and (max-width: 1024px) {
 	#disqus_thread {
 		width: 90%;
