--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -17,10 +17,15 @@
 
 <% @businesses.each do |business| %>
   <div class="large-4 columns box">
-  	<%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
-    <p><%= business.name %></p>
-    <p><%= business.formatted_address %><p>
-    <p><%= business.country %></p></br>
+    <div class="box-image-container">
+  	  <%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
+      <div></div>
+      <div "box-image-text">
+        <p><%= business.name %></p>
+        <p><%= business.formatted_address %><p>
+        <p><%= business.country %></p></br>
+      </div>
+    </div>
   </div>
 <% end %>
 
