--- a/app/views/businesses/recent.html.erb
+++ b/app/views/businesses/recent.html.erb
@@ -2,11 +2,13 @@
 
 <% @businesses.each do | business| %>
   <div class="large-4 columns box">
-  	<%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
-    <p><%= business.name %></p>
-    <p><%= business.formatted_address %><p>
-    <p><%= business.country %></p>
-    <p><%= "Date added: #{business.created_at.strftime("%d %b %Y")}" %><p>
+  	<div class="box-image-container">
+	  	<%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
+	    <p><%= business.name %></p>
+	    <p><%= business.formatted_address %><p>
+	    <p><%= business.country %></p>
+	    <p><%= "Date added: #{business.created_at.strftime("%d %b %Y")}" %><p>
+	  </div>
   </div>
 <% end %>
 
