change spelling of edit profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <!-- Right Nav Section -->
         <ul class="right">
           <% if user_signed_in? %>
-            <li class="active"><%= link_to "edit profile", edit_user_registration_path %></li>
+            <li class="active"><%= link_to "Edit profile", edit_user_registration_path %></li>
             <li class="has-dropdown">
               <a href="#">Logged in as <strong><%= current_user.display_name %></strong></a>
               <ul class="dropdown">
