--- a/app/views/static_pages/index.html+phone.erb
+++ b/app/views/static_pages/index.html+phone.erb
@@ -69,7 +69,7 @@
 	  </div>
   <% end %>
 
-	<%= link_to businesses_path(:country => "", :category => "Ocean") do %>
+	<%= link_to businesses_path(:country => "", :category => "12") do %>
 		<div class="large-4 columns country" id="ocean">
 	    <%= image_tag("ocean.jpg") %>
 	    <span class="text-content">Oceans</span>
