fix pagination so it appears

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -19,6 +19,12 @@
 	margin-right: 10%;
 }
 
+.pagination {
+	padding-top: 25px;
+	clear: both;
+	text-align: center;
+}
+
 #search {
 	display: inline;
 }
