--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -5,7 +5,7 @@
 <div id="search-container">
   <div id="search-content">
     <div id="search"> 
-      <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
+      <%= form_tag(businesses_path, :method => "get", :remote => true, id: "business-search") do %> 
         <%= label_tag :filter_by %>
         <%= select_tag :country, options_from_collection_for_select(Business.unique_by_country, "country", "country"), { :prompt => "Country", :id => "country-select" } %>
         <%= select_tag :category, options_from_collection_for_select(@category, "id", "name"), { :prompt => "Category", :id => "category-select" }%>
@@ -15,21 +15,22 @@
   </div>
 </div>
 
-<% @businesses.each do |business| %>
-  <div class="large-4 columns box">
-    <div class="box-image-container">
-  	  <%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
-      <div></div>
-      <div "box-image-text">
-        <p><%= business.name %></p>
-        <p><%= business.formatted_address %><p>
-        <p><%= business.country %></p></br>
+<div id="businesses-container">
+  <% @businesses.each do |business| %>
+    <div class="large-4 columns box">
+      <div class="box-image-container">
+    	  <%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
+        <div></div>
+        <div "box-image-text">
+          <p><%= business.name %></p>
+          <p><%= business.formatted_address %><p>
+          <p><%= business.country %></p></br>
+        </div>
       </div>
     </div>
+  <% end %>
+
+  <div class="pagination">
+    <%= paginate @businesses %>  
   </div>
-<% end %>
-
-<div class="pagination">
-  <%= paginate @businesses %>  
 </div>
-
