--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -16,21 +16,5 @@
 </div>
 
 <div id="businesses-container">
-  <% @businesses.each do |business| %>
-    <div class="large-4 columns box">
-      <div class="box-image-container">
-    	  <%= link_to image_tag(business.image.url(:medium)), business, id: "#{business.name}", :class => "streetview-image" %>
-        <div></div>
-        <div "box-image-text">
-          <p><%= business.name %></p>
-          <p><%= business.formatted_address %><p>
-          <p><%= business.country %></p></br>
-        </div>
-      </div>
-    </div>
-  <% end %>
-
-  <div class="pagination">
-    <%= paginate @businesses %>  
-  </div>
+  <%= render 'businesses' %>
 </div>
