index.js rendering correct partial

--- a/app/views/businesses/index.js.erb
+++ b/app/views/businesses/index.js.erb
@@ -1,1 +1,1 @@
-$('#businesses-container').append("<%= j(render @businesses %>)");
+$('#businesses-container').append("<%= j render(partial: 'businesses') %>");
